interview-platform-backend/k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interview-platform
  labels:
    istio-injection: enabled
